--- a/zjl/zhihu/css/zhihu.css
+++ b/zjl/zhihu/css/zhihu.css
@@ -16,14 +16,19 @@ body{background-color: rgb(241, 245, 248);}
 .topinplayer{cursor: pointer;position: absolute;width: 184px;height: 66px;background-image: url("images/home_play_button.png");margin-top: 30px;background-repeat: no-repeat;display: inline-block;vertical-align: middle;}
 .topinplayer:hover{background-position: 0 -66px;}
 
-.topinr{width: 340px;height: 356px;float: right;display:block;}
+.topinr{width: 340px;height: 356px;float: right;display:block;position: relative;overflow: hidden;}
 .topinrin{width: 202px;height: 280px;margin:38px 0 38px 0 ;float: right;}
+.tpspecial1{position: absolute;top:0px;left:140px;}
+.tpspecial2{position: absolute;top:0px;left:400px;}
 .lispe{width: 202px;height: 25px;display: block;}
 .lispe1{float: left;display: inline;width: auto;height: auto;color: rgb(255, 255, 255);font-size: 15px;line-height: 25.5px;font-family: 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, 'Hiragino Sans GB', sans-serif;text-align: left;}
 .lispe2{cursor: pointer;float: right;display: block;width: 56px;height: 25px;color: rgb(255, 255, 255);font-size: 15px;line-height: 25.5px;font-family: 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, 'Hiragino Sans GB', sans-serif;text-align: left;}
 .lispe2pic{margin-top: 3.5px;width: 18px;height: 19px;margin-left: 8px;display: inline-block;float: right; background-image: url("images/signup-1.3.png");background-position: -1px -1px;}
 
+
 .licom{width: 202px;height: 35px;display: block;padding-top: 18px;}
+.licom a{font-size: 10px;color:#fff;display: block;float: right; }
+.licom label{font-size: 10px;}
 .licom input{background: #e7f1f8;font-size: 15px;border: 1px solid #003e70;border-radius: 5px;padding: 8px 10px;box-shadow: inset 0 1px 2px rgba(15,82,135,.25),0 1px 0 rgba(255,255,255,.15);color: #555;line-height: 17px;font-family: 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,'Hiragino Sans GB',sans-serif;}
 .xing{width: 92px;display: inline-block;float: left;}
 .ming{width: 92px;display: inline-block;float: right;}
@@ -66,4 +71,13 @@ body{background-color: rgb(241, 245, 248);}
 .vote{border-radius: 3px;display: block;float: left;width: 38px;height: 25px;background-color: rgb(176, 197, 214);cursor: pointer;color: #fff;text-align: center;}
 .answertxt{height: auto;margin-left: 8px;display:inline-block;float: left;color:  #7491A8;width: 390px;}
 .answertxt:hover{text-decoration: underline;}
-#footer{width: 100%;min-width: 1349px;height:100px;margin:0px auto;padding-bottom: 60px;background-color: #efefef}
+#footer{width: 100%;min-width: 1349px;height:100px;margin:80px auto;}
+#footerin{width: 740px;height: 40px;margin: 0 auto;}
+.links{width: 310px;height: 40px;float: left;font-family: 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,'Hiragino Sans GB',sans-serif;font-size: 12px;line-height: 20.5px;}
+.div{width: 310px;height: 20px;}
+.links a{display: inline-block;float: left;color:  rgb(174, 189, 201);}
+.dot{margin: 0 3px;color: rgb(174, 189, 201);display: block;float: left;}
+.footpic1{width: 153px;height: 38px;display: block;float: left;margin-left: 30px;background-image: url("images/signup-1.3.png");background-position: 0px -23px;background-repeat: no-repeat;}
+.footpic2{width: 183px;height: 38px;display: block;float: left;margin-left: 30px;background-image: url("images/signup-1.3.png");background-position: 0px -61px;background-repeat: no-repeat;}
+.footpic1:hover{opacity: .8;}
+.footpic2:hover{opacity: .8;}
