--- a/zjl/kfc/css/kfc.css
+++ b/zjl/kfc/css/kfc.css
@@ -7,16 +7,25 @@ font-family:food;
 src: url('food.otf'); 
 } 
 
-#header{width: 100%;min-width: 1349px;height: 64px;margin-bottom: 10px;background-color: rgb(171, 24, 47);}
+#header{position: relative;width: 100%;min-width: 1349px;height: 64px;margin-bottom: 10px;background-color: rgb(171, 24, 47);}
 #nav{width: 990px;height: 34px;padding-top: 15px;margin: 0 auto;}
 #navpic{width:120px;height: 34px;float: left;}
 #search{width: 675px;height: 34px;float: right;}
 #search li{display: inline-block;height: 33px;padding: 0 15px;}
 .searchli{color: rgb(255, 255, 255);cursor: auto;display: inline;font-family: "food";font-size: 26px;letter-spacing: -.01em;height: auto;line-height: 33.6px;text-align: left;text-transform: uppercase;}
 .searchli:hover{color: rgb(220,220,220)}
+.foodpic{display: none;background-image: url("images/white-nav-arr.png") ;background-repeat: no-repeat;background-position: bottom center;padding-top: 10px}
 #search #searchin{float: right;color: rgb(34, 34, 34);display: block;font-size: 24px;height: 34px;line-height: 33px;text-align: left;width: 241px;padding: 0px}
 #sehinput{background-color: rgb(103, 14, 28);color: rgb(255, 255, 255);cursor: auto;display: block;float: left;font-family: arial, sans-serif;font-size: 12px;font-weight: bold;height: 31px;width: 208px;margin-right: 3px;max-width: 210px;border: 0px;padding-left: 12px;}
-#sehpic{outline: none;}
+#sehpic{background: #fff url("images/search-icon.png") top left no-repeat;text-indent: -1000%;width: 30px;height: 30px;border: none;display: inline-block;}
+.foodnav{z-index: 100;display: none;width: 1349px;height: 171px;padding: 0.5em 0;position: absolute;left: 0px;top:55px;background-color: #fff}
+#foodnavin{margin: 0 auto;width: 990px;height: 147px;text-align: center;color: rgb(171, 24, 47);font-family: "food";font-size: 20px;font-weight: bold;}
+#foodnavin a{color: rgb(171, 24, 47);}
+#foodnavin li{height: 145px;display: block;float: left;width: 115px;padding:0px;margin-right: 10px}
+#foodnavin .foodli1{width:240px; }
+#foodli6{border-left-color: rgb(209, 209, 209);border-left-style: solid;border-left-width: 1px;width:220px;height: 115px;display: block;float:right;text-align: left;}
+#foodli6 li{display:block;width: 162px;height: 11px;padding: 0 0 17px 12px;}
+#foodli6 a:hover{color: #510b16}
 
 #content{width: 1349px;height: 875px;margin: 0 auto;}
 #footer{width: 1349px;height: 208px;margin: 0 auto;}
