--- a/zjl/kfc/css/kfc.css
+++ b/zjl/kfc/css/kfc.css
@@ -4,7 +4,7 @@ a{text-decoration: none;}
 img{border:0;}
 @font-face { 
 font-family:food; 
-src: url('food.otf'); 
+src: url("food.otf"); 
 } 
 
 #header{position: relative;width: 100%;min-width: 1349px;height: 64px;margin-bottom: 10px;background-color: rgb(171, 24, 47);}
@@ -14,7 +14,7 @@ src: url('food.otf');
 #search li{display: inline-block;height: 33px;padding: 0 15px;}
 .searchli{color: rgb(255, 255, 255);cursor: auto;display: inline;font-family: "food";font-size: 26px;letter-spacing: -.01em;height: auto;line-height: 33.6px;text-align: left;text-transform: uppercase;}
 .searchli:hover{color: rgb(220,220,220)}
-.foodpic{display: none;background-image: url("images/white-nav-arr.png") ;background-repeat: no-repeat;background-position: bottom center;padding-top: 10px}
+.foodpic{display:none;background-image: url("images/white-nav-arr.png") ;background-repeat: no-repeat;background-position: bottom center;padding-top: 10px}
 #search #searchin{float: right;color: rgb(34, 34, 34);display: block;font-size: 24px;height: 34px;line-height: 33px;text-align: left;width: 241px;padding: 0px}
 #sehinput{background-color: rgb(103, 14, 28);color: rgb(255, 255, 255);cursor: auto;display: block;float: left;font-family: arial, sans-serif;font-size: 12px;font-weight: bold;height: 31px;width: 208px;margin-right: 3px;max-width: 210px;border: 0px;padding-left: 12px;}
 #sehpic{background: #fff url("images/search-icon.png") top left no-repeat;text-indent: -1000%;width: 30px;height: 30px;border: none;display: inline-block;}
@@ -30,5 +30,14 @@ src: url('food.otf');
 #content{width: 1349px;height: 875px;margin: 0 auto;}
 #footer{width: 1349px;height: 208px;margin: 0 auto;}
 #contentl{width: 179px;height: 875px;float: left;}
+#contentlin{width: 240px;height: 875px;float: right;margin-right: 10px;overflow-x: hidden;
+overflow-y: hidden;
+vertical-align: top;}
+.l1{display: block;width: 240px;height: 240px;margin-bottom: 10px;background-color: #fff;}
+.l1image:hover{opacity: 1}
+.l1image{display: inline-block;opacity: 0.3;	}
+
+
+
 #contentm{width: 990px;height: 865px;float: left;}
 #contentr{width: 179px;height: 875px;float: right;}
